# hpsilab-mcp-sdk

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  test.py
docs/: api.md
examples/: claude-desktop.md  codex.md  openai-agents.md  python-quickstart.py
python/: client.py
src/hpsilab_mcp/: __init__.py  client.py  errors.py  types.py
tests/: test_client.py  test_errors.py
typescript/: client.ts
