[project]
name = "hpsilab-mcp"
version = "0.1.0"
description = "Python SDK for H|ψ Quantum Finance APIs."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

authors = [
  { name = "Haiyun Hu" }
]

keywords = [
  "finance",
  "quantitative-finance",
  "mcp",
  "sdk",
  "options"
]

dependencies = [
  "httpx>=0.27,<1"
]

[project.urls]
Homepage = "https://hpsilab.com"
Repository = "https://github.com/haiyunsky/hpsilab-mcp-sdk"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
